## sw/Makefile.am
## Process this file with automake to produce Makefile.in
  	
###EXTRA_DIST = BUGS ChangeLog.O README-alpha
SUBDIRS = bnfc model docs

EXTRA_DIST = nds/ model/tests

dist_bin_SCRIPTS = bin/swgraph bin/swgo	   bin/swlocusts.sh  sw.sh bin/swgen.sh  bin/swproject.sh  bin/swskel.sh




